--- a/Photoshop.html
+++ b/Photoshop.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4m" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Generator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4m" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -277,7 +277,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="QC7hU7BkEHEl+dMmwVezrAL3tVfbMBueNU24eGs6t73Cyqd0YxP+E67zZ+7lf4up7G0EuF10J+xXwhB6cWyQ/wZ6GVz3JFkx3JelmPMGoIMOCMdeM3rP7MOVBNY2lRoP" data-form-email="true">
+                    <input type="hidden" value="khlBtKs8x6U+zAiV7Sru091P3ra7eGN6u7dX0QMw05Iu7JduCqa668LVwLUPFTdr00DhEf7330j7+XOHKu9Z/pojmYJQP69tDYhEw+2++0raJJBfAc/NOy7lgJaBojph" data-form-email="true">
 
                     
 
