--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top wysiwyg web building</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">drag and drop web maker software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="svYJr+9HuoStnlndywKP7DSYrxusXxg3oFXYfJ0giMRG0IhZM96BKcHxLRLeghI7MxVJCAH4Jj3a5S2Nb7YNJUYNVR/UJ2x+nwm+B+Lm5iYsLx1NvXye3YVdMRCwApsh" data-form-email="true">
+                    <input type="hidden" value="D5Mu3UxMBDtiGI5H5jKT528+qz2XnFD5ctQhpo5OOcs4qiR/SoHJTg90l1mKGARJBVBO8MqXLPMMc+EMTFqHtOxs2agl1l6ha3ZlAZ5lA4zto+Dk0bVO9vvCUwEDFVDH" data-form-email="true">
 
                     
 
