--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top bootstrap web building software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/mbr-3-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">free bootstrap web page creator software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/mbr-3-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);"></div>
 
@@ -202,6 +202,35 @@
     </div>
 </section>
 
+<section class="mbr-section" id="form2-65" style="background-color: rgb(46, 46, 46); padding-top: 40px; padding-bottom: 40px;">
+        <div class="mbr-section mbr-section__container mbr-section__container--middle">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 text-xs-center">
+                    <h3 class="mbr-section-title display-2">SUBSCRIBE FORM</h3>
+                    <small class="mbr-section-subtitle">Subscribe to my website</small>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="mbr-section mbr-section-nopadding">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
+                    <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE FORM">
+                        <input type="hidden" value="C2vfRZVrzXzIZemPNp4WbNlvLh8L4U4pJ6H+0uxD6BGRLes/r9wqgg3QJ/cfKs2Ft0BpctWOZYotTIt+bf1cIxl+y1ltOVhIenWBEe8z58m1tbHDxPBUMLwuR5w79oWM" data-form-email="true">
+                        <div class="mbr-subscribe mbr-subscribe-dark input-group">
+                            <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-65-email">
+                            <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section class="mbr-footer mbr-section mbr-section-md-padding" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
@@ -246,7 +275,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="RUcvaiTueJJ8KGngfUzZDy0B1shBl4saBqnm+uFCLtJHr+6p0+KDfeMDMF+cADcYGezDYBwVTfOFhrJyx7KJRyPccoK52YXTLD3rOyuDjKT05tJFN1prhPte7CwwC1/m" data-form-email="true">
+                    <input type="hidden" value="w2Yc7MhMVMjJePwXKBloqh0Xbx//0YbidbjF7IeWzDpFUTPxcfazaOKBgbwfGxUPJMtW+CpvlZPeerEd6awfatnUSHpypRLqjh3SHbMUmzY41usENQHi3ZADKFsz11Wx" data-form-email="true">
 
                     
 
