--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">drag and drop website generator</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">free web maker</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="AiefviK0PMtT+lX78WKPn7P1WGZnA1LYyWW+Agj2upaTDhfHquTJRGDuRW3oM1uBCA6Ra5OOheAQAlgcTurBoM38nUM8BkvZrgYrZ9B82pNs9cjg5/PcUnGAintxv44f" data-form-email="true">
+                    <input type="hidden" value="Y1ktB3hnM0c3SkNWiV6/RDB+RMEoz/ApcNnR4z3fyKxpmZY2+SmDrWGMjjNYF/64lWJUHp6LIO64xyxaLbqAjUShcVPT7VS0kYcMskRwXrSWB0EhF9BCBpsvM4EB7Uz1" data-form-email="true">
 
                     
 
