--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">site development software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">html web maker software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="dFfAccs6ylyQgLbQjD/pbduCGnpg+G9lDgvlGvTdSze7NbV14oa+JQb1lMwXxmwfa7W1g+F/NWMqA+48eT+lL4cmBXkly0EDbFFPeRFrFCKt4m/GNbRr5tgKkDSNbena" data-form-email="true">
+                    <input type="hidden" value="Jr64L+YVECR93Wam4lZs1C1nh4cVHqAGITbOALZhbi5FHgdwfMwZoaAEtmiNvIb+1B2iRO7+81SSqpk5bNgPQJATa0xmzZPtUf58Knixwbsm+nIXGbOR3Elwkg0slNyB" data-form-email="true">
 
                     
 
