--- a/Photoshop.html
+++ b/Photoshop.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free html website maker software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4m" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">best responsive web site creator software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4m" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -157,7 +157,7 @@
                             <img alt="" src="assets/images/front-and-back-of-the-cd-cover-with-fixed-measurements-2000x1640-800x656.jpg">
                             
                             <span class="icon-focus"></span>
-                            <span class="mbr-gallery-title">Back of the cd cover</span>
+                            <span class="mbr-gallery-title">Front and back of the cd cover</span>
                         </div>
                     </div>
                 </div>
@@ -1669,7 +1669,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="P1dxPAWZKaxiIMGVwMOTbfQkdpeyfrC5G6sbnYWOuuFvhb78NSp7sJ29dSSr2UR3cNcQAzVabodSixo/CLw6j3TMGmgm47wFhPg/3tRMYE/WjuXHlxTtSqP648gSAhUK" data-form-email="true">
+                    <input type="hidden" value="LXnzr01hZDNP2QWOQkeg66/PyXX++AwmoYeDrHpNLErsGk/msiSySm3J+AmonBPsOolMQryyQuVI+uMkS8brxiBH7YjKCWbzrKykM++/h9asHtC/t/dh0hD8V9JaQssq" data-form-email="true">
 
                     
 
