--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">html web maker software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">responsive site generator software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="Jr64L+YVECR93Wam4lZs1C1nh4cVHqAGITbOALZhbi5FHgdwfMwZoaAEtmiNvIb+1B2iRO7+81SSqpk5bNgPQJATa0xmzZPtUf58Knixwbsm+nIXGbOR3Elwkg0slNyB" data-form-email="true">
+                    <input type="hidden" value="mHG9yUmklj7j9+gW5WKah1My5rLNDMtBTuw6ZIMcKPzTb10TafUHLHZOQUoTAs1Hz9epBENrV9P62+GiUjD9ZpDipPhAaHXPdelTVQK98hy5iwoWoqYQgvN7X4M4FVFn" data-form-email="true">
 
                     
 
