--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">responsive site generator software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">html site building software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="mHG9yUmklj7j9+gW5WKah1My5rLNDMtBTuw6ZIMcKPzTb10TafUHLHZOQUoTAs1Hz9epBENrV9P62+GiUjD9ZpDipPhAaHXPdelTVQK98hy5iwoWoqYQgvN7X4M4FVFn" data-form-email="true">
+                    <input type="hidden" value="XLkXzdcum3IwzyFo/AdMFPhsVenEdF5GK4UK8c+ENo7JY4NMNsPGm6J0S9ab41+coOTFm2Tb20r541qhHpa2G5tua5jbEaqQPcXfpt4XcqIhVVOF8vL7+iqYtTGov998" data-form-email="true">
 
                     
 
