--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best mobile web page building software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/mbr-3-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">best drag and drop website design software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/full-unsplash-photo-1454165205744-3b78555e5572-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);"></div>
 
@@ -81,14 +81,13 @@
 
 </section>
 
-<section class="mbr-section article mbr-parallax-background" id="msg-box8-63" style="background-image: url(assets/images/mbr-6-2000x1333.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-section article" id="msg-box8-63" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 40px;">
 
-    <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(34, 34, 34);">
-    </div>
+    
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
-                <h3 class="mbr-section-title display-2">A Little Bit About Me<br></h3>
+                <h3 class="mbr-section-title display-2">Watch My Story&nbsp;</h3>
                 <div class="lead"></div>
                 <div><a class="btn btn-black" href="https://www.youtube.com/watch?v=-GTzmlIE58I" target="_blank">YouTube Video Link</a></div>
             </div>
@@ -219,7 +218,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE FORM">
-                        <input type="hidden" value="zCTx5R2KR2xjtasDvYzEQKysPJZDrU+RB0Dedwcaau0P0Zg5hikKIJjikEgWHQ0t1O6pE7/F60AdYNlh+fwyasLFHh2C7KY7olw2A/ckvini3qFC7tRXnPYTwRxfjuKu" data-form-email="true">
+                        <input type="hidden" value="iROwESOMEJsdPGRRQxc6Gu0TrAE0nX3AA2AVqQs5GjfWfR8sU+O/clSqHf2Qm06rDCAQsb+qQg7iHjztjRtWiCi+fVwjQZ3Q4WxnNSPwABFN84O6jTX0oS7+zJVznxhi" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-65-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
@@ -275,7 +274,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="FDcyqHdJKJgNyo83le9v/nustiWSU5hmfRIKcJIaGsF0z11QRls57Vh+NcjZsQxK/C1QlDbkrHxXe6xh4lCVzKWSDzLKMuDO49gWn4+EEC11M6BbGFWZbstrYwcSCbF+" data-form-email="true">
+                    <input type="hidden" value="HpTYTb0WuES8FCpZ3iLtpXN1e0cZKLiUXUyLXTiwlIad9kESvOlgx1ePfVVwpFfNC2LpSdGLCUvR7moT0jzxLu+cWoq8JyB3iKujlUNwERBtFtDetPmo4V0JTIE3hLXY" data-form-email="true">
 
                     
 
