--- a/LightRoom.html
+++ b/LightRoom.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy html website building software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple responsive website building software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -256,7 +256,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="K5+bvCsxAVu9FboEJzIY+lSAzusfEkOPnKMUroH3NMDgrzGW4wl2fCokGqaPXAAJN36FsVNbQEL2m2usF7bpmV1AWh0DACcuW8SC4ybDBYyjwmcaYw+gLepdB3AYbYr9" data-form-email="true">
+                    <input type="hidden" value="n4nLcorhSU2PBvffwZA20DGheasln9jN/Tx9BtOjfwJS1x737LBp/yHdjjQ+/CedQlhuweVJasDq1TJND/em7QBOLn3XZURBozNRsFdTGpG/vsp5IrBZ5+K0BGohx4qg" data-form-email="true">
 
                     
 
