--- a/123D.html
+++ b/123D.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free html web page generator software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4p" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy offline web site generator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4p" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -70,24 +70,12 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="buttons1-5b" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container" id="buttons1-68" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"><a class="btn btn-primary" href="javierasencio.github.io/Javier Asencio iphone case with logo.123dx">DOWNLOAD IPHONE CASE&nbsp;</a> </div>
-            </div>
-        </div>
-    </div>
-
-</section>
-
-<section class="mbr-section mbr-section__container" id="buttons1-66" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <div class="text-xs-center"><a class="btn btn-primary" href="javierasencio.github.io/Javier Asencio binder clip finished version.123dx">DOWNLOAD 3D PAPER CLIP</a> </div>
+                <div class="text-xs-center"><a class="btn btn-primary" href="javierasencio.github.io/Javier Asencio iphone case with logo.123dx">DOWNLOAD IPHONE CASE</a> <a class="btn btn-primary-outline btn-primary" href="javierasencio.github.io/Javier Asencio binder clip finished version.123dx">DOWNLOAD 3D PAPER CLIP</a></div>
             </div>
         </div>
     </div>
@@ -280,7 +268,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="accZ6zMGqAj3flY+prQB9FjDiGfzhD4ug3yj+BNlKYpNqpzP7RMFCOzdrJNCDnyMeGMXog9NdO2JHDa0ghxFDKzrmU3AmJIVxVUdLkM7ezbg22+7+oUe5m1doj6o5zkd" data-form-email="true">
+                    <input type="hidden" value="YxVFL/h/Hip9cCMWj2gCFU2WBIONWPrWW4CygPnIxI6eP7F0yWv0NRvKHaZnuW/y8pwjV87XYaItt6l9CWz5LdixWZVxJ9GpwIYd4Wyi4ORs4+hmSCQ7r66V2TRhNSXs" data-form-email="true">
 
                     
 
